fix(editor): #WB-3200 add overflow-wrap anywhere for custom image class

--- a/packages/bootstrap/scss/components/tiptap/_custom-image.scss
+++ b/packages/bootstrap/scss/components/tiptap/_custom-image.scss
@@ -8,4 +8,5 @@ p:has(.node-custom-image) {
   display: flex;
   gap: $spacer-16;
   flex-wrap: wrap;
+  overflow-wrap: anywhere;
 }
